@startuml

package graphcomponent <<Folder>> {
    class Edge{
        -{static} line: Line
        +Edge(isDirected: boolean)
        -{static}arrowLength: double
        -{static} arrowWidth: double
        -Edge(line: Line, arrow1: Line, arrow2: Line, isDirected: boolean)
        +{static}setStartX(value: double): void
        +{static}getStartX(): double
        +{static}startXProperty(): DoubleProperty
        +{static}setStartY(value: double): void
        +{static}getStartY(): double
        +{static}startYProperty(): DoubleProperty
        +{static}setEndX(value: double): void
        +{static}getEndX(): double
        +{static}endXProperty(): DoubleProperty
        +{static}setEndY(value: double): void
        +{static}getEndY(): double
        +{static}endYProperty(): DoubleProperty
        +{static}setColor(): void
        +{static}resetColor(): void
    }
    class Graph{
        -adj: HashMap<Vertex, List<Vertex>>
        -isDirected: boolean
        +Graph()
        +Graph(isDirected: boolean)
        +getIsDirected(): boolean
        +getAdj(): HashMap<Vertex, List<Vertex>>
        +containsEdge(from: Vertex, to: Vertex): boolean
        +getVertex(id: int): Vertex
        +addVertex(vertex: Vertex): void
        +deleteVertex(id: int): void
        +deleteVertex(v: Vertex): void
        +addEdge(from: int, to: int): void
        +addEdge(fromVertex: Vertex, toVertex: Vertex): void
        -deleteEdge(from: int, to: int): void
    }

    class Vertex{
        -controller: VertexController
        -isChosenItem: boolean
        -{static}numberOfChosenItem: int
        +Vertex()
        +getIdOfVertex(): int
        +getVertex(): Circle
        +changeColor(): void
        +resetColor(): void
        +getIsChosenItem(): boolean
        +{static}getNumberOfChosenItem(): int
        +{static}resetStaticVar(): void
    }

    class VertexController{
        -vertex: Circle
        -_id: Text
        -id: int
        -{static}increaseID: int
        -{static}deletedId: <TreeSet<Integer>>
        +initialize(arg0: URL, arg1: ResourceBundle): void
        +getVertex(): Circle
        +getId(): int
        +{static}resetId(): void
        +{static}addToDeletedStack(i: int): void
    }
    package Vertex.fxml <<Frame>> {
    }
}

Vertex.fxml -- VertexController
Graph *-- Vertex
Vertex o-- VertexController

@enduml
